--- a/Perceptron_03_RNA_UFPEL.ipynb
+++ b/Perceptron_03_RNA_UFPEL.ipynb
@@ -580,7 +580,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Esta linha carrega o modelo salvo a partir do arquivo perceptron_model.h5.\n"
+        "Esta linha carrega o modelo salvo a partir do arquivo perceptron_model.keras.\n"
       ],
       "metadata": {
         "id": "23pz37jdbSNU"
